# shabbosgoy

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/articles/: .my_shabbos_goy.md.kate-swp  my_shabbos_goy.md
src/: dev.py
src/shabbosgoy/: config.py  executor.py  llm.py  main.py  memory.py  modes.py  utils.py
src/shabbosgoy/prompts/: agentic.prompt.xml  atomic.prompt.xml
tests/: Dockerfile  clean_install.sh  test_shabbosgoy.sh
