[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shabbosgoy"
version = "0.1.2"
description = "An agentic AI sysadmin tool for Linux terminal environments. Supports all chat completions API services including OpenAI, OpenRouter, Gemini, and Ollama"
readme = "README.md"
authors = [
    {name = "Sam Rahimi", email = "samrahimi420@gmail.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Topic :: System :: Systems Administration",
]
keywords = ["ai", "sysadmin", "terminal", "automation"]
dependencies = [
    "click",
    "requests"
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/samrahimi/shabbosgoy"
"Bug Tracker" = "https://github.com/samrahimi/shabbosgoy/issues"

[project.scripts]
shabbosgoy = "shabbosgoy.main:main"
shiksa = "shabbosgoy.main:main"
goy = "shabbosgoy.main:main"

[tool.distutils.bdist_wheel]
universal = true
